readme file updated

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li class="breadcrumb-item"><a href="#navcommithistory">Commit History</a></li>
                 <li class="breadcrumb-item"><a href="#navactiveusers">Active Users</a></li>
                 <li class="breadcrumb-item"><a href="#navrecentscreenshots">Recent Screenshots</a></li>
-                <li class="breadcrumb-item"><a href="https://factiveuser.streamlit.app/" target="_blank">Active User
+                <li class="breadcrumb-item"><a href="https://activeuser.streamlit.app/" target="_blank">Active User
                         Dashboard</a></li>
             </ol>
         </nav>
